<resources>
    <string name="app_name" translatable="false">Nouto</string>
    <string name="repository_link" translatable="false">https://github.com/HotarunIchijou/Nouto</string>
    <string name="telegram_link" translatable="false">https://t.me/KaorunIchijou"</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="notes_hint">Type your notes here</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add note</string>
    <string name="searchbar_hint">Search</string>
    <string name="navigation_drawer_description">Navigation drawer</string>
    <string name="layout_switch_description">Switch layout</string>
    <string name="bold_style_description">Bold style</string>
    <string name="italic_style_description">Italic style</string>
    <string name="underline_style_description">Underline style</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="search_delete_button_description">Delete suggestion</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_summary">Application colors and theme modes</string>
    <string name="about">About</string>
    <string name="about_summary">About application</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System default</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notes_empty">You don\'t have any notes yet</string>
    <string name="nothing_found">Nothing found in your notes</string>
    <string name="note_deleted_message">Note has been deleted</string>
    <string name="trash">Trash</string>
    <string name="there_are_no_deleted_notes">There are no deleted notes</string>
    <string name="delete_note_dialog_title">Delete note forever?</string>
    <string name="delete_note_dialog_message">The note will be permanently deleted and can\'t be recovered</string>
    <string name="undo">Undo</string>
    <string name="note_restored_message">Note has been restored</string>
    <string name="delete_notes_dialog_title">Delete all notes forever?</string>
    <string name="delete_notes_dialog_message">Notes will be permanently deleted and can\'t be recovered</string>
    <string name="type_to_start_search">Type to start search</string>
    <string name="restore_note_dialog_title">Restore note from trash?</string>
    <string name="restore_note_dialog_message">This item will be restored from trash</string>
    <string name="restore">Restore</string>
    <string name="theming">Theming</string>
    <string name="app_icon">App icon</string>
    <string name="the_best_app_for_taking_notes">The best app for taking notes</string>
    <string name="version">Version</string>
    <string name="source_code">Source code</string>
    <string name="source_code_summary">Project repository on GitHub</string>
    <string name="contact_developer">Contact developer</string>
    <string name="contact_developer_summary">Give feedback to developer via Telegram</string>
    <string name="language">Language</string>
    <string name="language_summary">Choose the language of application</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="dynamic_colors_summary">Colors based on your wallpaper</string>
    <string name="pure_black_theme">Pure black theme</string>
    <string name="pure_black_theme_summary">Make the app background black</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="note_pinned_message">Note has been pinned</string>
    <string name="note_unpinned_message">Note has been unpinned</string>
    <string name="open_menu">Open menu</string>
    <string name="dialog_keepandroidopen_title">Important information</string>
    <string name="dialog_keepandroidopen_warning">Google has announced that, starting in 2026/2027, all apps on certified Android devices will require the developer to submit personal identity details directly to Google. Since the developers of this app do not agree to this requirement, this app will no longer work on certified Android devices after that time.</string>
    <string name="dialog_keepandroidopen_more_info">More info</string>
    <string name="dialog_keepandroidopen_solution">Solution</string>
    <string name="dialog_keepandroidopen_solution_uri" translatable="false">https://github.com/woheller69/FreeDroidWarn?tab=readme-ov-file#solutions</string>
    <string name="dialog_keepandroidopen_uri" translatable="false">https://keepandroidopen.org"</string>
</resources>