<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginVertical="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/eight_leaf_clover"
        android:backgroundTint="?colorPrimaryContainer"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_launcher_monochrome"
            app:tint="?colorOnPrimaryContainer"
            xmlns:app="http://schemas.android.com/apk/res-auto" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:textAppearance="?textAppearanceDisplaySmallEmphasized"
        android:textColor="?colorOnSurface"
        android:fontFamily="@font/google_sans_flex_round"
        android:textFontWeight="500"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:textAppearance="?textAppearanceHeadlineSmallEmphasized"
        android:textColor="?colorOnSurface"
        android:fontFamily="@font/google_sans_flex_round"
        android:textFontWeight="500"
        android:text="@string/the_best_app_for_taking_notes" />
</LinearLayout>