<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurfaceContainer"
    tools:context=".ui.fragments.NoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurfaceContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_collapseMode="pin">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:theme="@style/ThemeOverlay.CircleNavigationButton"
                app:menu="@menu/appbar"
                app:navigationIcon="@drawable/arrow_back_24px" />

            <com.google.android.material.button.MaterialButtonGroup
                android:id="@+id/button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:spacing="4dp"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3Expressive.Button.IconButton.Filled"
                    android:id="@+id/button_delete_permanently"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="?colorSurfaceContainerHighest"
                    app:iconTint="?colorOnSurfaceVariant"
                    app:icon="@drawable/delete_forever_24px"
                    app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small.Narrow" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3Expressive.Button.IconButton.Filled"
                    android:id="@+id/button_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/restore_from_trash_24px"
                    app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small.Wide" />
            </com.google.android.material.button.MaterialButtonGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/save"
                android:visibility="gone" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.onegravity.rteditor.RTEditText
                android:id="@+id/note_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:maxWidth="840dp"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/title"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?textAppearanceDisplaySmallEmphasized"
                android:textFontWeight="500"
                app:layout_constraintWidth_max="840dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/title_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/title_divider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintWidth_max="840dp"
                app:layout_constraintTop_toBottomOf="@id/title_divider"
                app:layout_constraintBottom_toTopOf="@id/note_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.onegravity.rteditor.RTEditText
                android:id="@+id/note_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:accessibilityTraversalAfter="@id/floating_toolbar"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/notes_hint"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?textAppearanceTitleLarge"
                app:layout_constraintWidth_max="840dp"
                app:layout_constraintTop_toBottomOf="@id/title_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingtoolbar.FloatingToolbarLayout
        style="?attr/floatingToolbarVibrantStyle"
        android:id="@+id/floating_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="16dp"
        android:accessibilityTraversalBefore="@id/note_content"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialIconButtonStyle"
                android:id="@+id/style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/bold_style_description"
                app:icon="@drawable/format_bold_24px" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialIconButtonStyle"
                android:id="@+id/style_italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/italic_style_description"
                app:icon="@drawable/format_italic_24px" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialIconButtonStyle"
                android:id="@+id/style_underline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checkable="true"
                android:contentDescription="@string/underline_style_description"
                app:icon="@drawable/format_underlined_24px" />
        </LinearLayout>
    </com.google.android.material.floatingtoolbar.FloatingToolbarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>